# cloudflare-gateway-adblocking

./: .env.example  .envrc.bat  .gitignore  LICENSE  README.md  hosts-urls.ini  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: upload.yml
cloudflare_gateway_adblocking/: __main__.py
cloudflare_gateway_adblocking/utils/: __init__.py  delete_adblock_zerotrust.py  utils.py
src/: __main__.py  adblock_zerotrust.py  cmd.py  delete_adblock_zerotrust.py
src/utils/: __init__.py  adblock_zerotrust.py  delete.py  download.py  upload.py  utils.py
zerotrust_adblock/: adblock-zerotrust.py  adblock_zerotrust.py  delete_adblock_zerotrust.py  utils.py
