[tool.poetry]
name = "cloudflare-gateway-adblocking"
version = "0.1.0"
description = "Serverless adblocking via Cloudflare Zero Trust Gateway"
authors = ["slastechno 77907286+slashtechno@users.noreply.github.com"]
license = "MIT"
readme = "README.md"
packages = [{include = "cloudflare_gateway_adblocking"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
