[tool.poetry]
name = "cloudflare-gateway-adblocking"
version = "0.1.3"
description = "Serverless adblocking via Cloudflare Zero Trust Gateway"
authors = ["slastechno <77907286+slashtechno@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/slashtechno/cloudflare-gateway-adblocking"
keywords = ["cloudflare", "dns", "adblocking", "serverless"]

packages = [{include = "src"}]

[tool.poetry.scripts]
cloudflare-gateway-adblocking = "src.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.281"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
